[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Game/Answers.gd" type="Script" id=1]
[ext_resource path="res://Assets/Resources/ButtonFont.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="Animation" id=8]
resource_name = "ButtonMove"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Answer1:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 64, 16 ), Vector2( 64, 0 ), Vector2( 64, -16 ), Vector2( 64, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Answer2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 144, -16 ), Vector2( 144, 0 ), Vector2( 144, 16 ), Vector2( 144, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Answer3:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 224, 16 ), Vector2( 224, 0 ), Vector2( 224, -16 ), Vector2( 224, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Answer4:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 304, -16 ), Vector2( 304, 0 ), Vector2( 304, 16 ), Vector2( 304, 0 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Answer1:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 64, 32 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Answer2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 144, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Answer3:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 224, 32 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Answer4:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 304, 0 ) ]
}

[node name="Answers" type="Node2D"]
position = Vector2( 0, 640 )
script = ExtResource( 1 )

[node name="Answer1" type="Button" parent="."]
margin_left = 64.0
margin_top = 32.0
margin_right = 120.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 3 )
text = "13"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer2" type="Button" parent="."]
margin_left = 144.0
margin_right = 210.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 3 )
text = "27"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer3" type="Button" parent="."]
margin_left = 224.0
margin_top = 32.0
margin_right = 290.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 3 )
text = "32"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer4" type="Button" parent="."]
margin_left = 304.0
margin_right = 370.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 3 )
text = "33"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ButtonMove = SubResource( 8 )
anims/RESET = SubResource( 9 )

[connection signal="pressed" from="Answer1" to="." method="_on_Answer1_pressed"]
[connection signal="pressed" from="Answer2" to="." method="_on_Answer2_pressed"]
[connection signal="pressed" from="Answer3" to="." method="_on_Answer3_pressed"]
[connection signal="pressed" from="Answer4" to="." method="_on_Answer4_pressed"]
